@@ -35,6 +35,7 @@ public:
 
     QMap<QString, QVariant> getSettings();
     void setSettings(QMap<QString, QVariant> settings);
+    QPixmap getResultImage();
 
 public slots:
     void tabChanged(int index);
@@ -43,7 +44,7 @@ public slots:
 private:
         QList<BaseFilter *> tabToFilter;
         int oldIndex; //stores the last selected index
-
+        void updatePixmapInTabs(int beginTab = 1, int endTab = -1);
         void updateCurrentTabPixmap(int fromIndex = 1);
     };
 
