@@ -1,2 +1,3 @@
 201209
  - Saving / Loading project Settings
+ - Exporting project to images
